--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.5
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
+  rxdart: ^0.27.5
   
 dev_dependencies:
   flutter_test:
