--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
   rxdart: ^0.27.5
+  go_router: ^5.1.1
   
 dev_dependencies:
   flutter_test:
