--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   equatable: ^2.0.5
   rxdart: ^0.27.5
   go_router: ^5.1.1
+  leancloud_storage: ^0.7.10
   
 dev_dependencies:
   flutter_test:
