--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,9 @@ dependencies:
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
   rxdart: ^0.27.5
-  go_router: ^5.1.1
-  leancloud_storage: ^0.7.10
-  
+  auto_route: ^5.0.2
+  shared_preferences: ^2.0.15
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -53,6 +53,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  auto_route_generator: ^5.0.3
+  build_runner: ^2.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
