--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   rxdart: ^0.27.5
   auto_route: ^5.0.2
   shared_preferences: ^2.0.15
+  flutter_form_builder: ^7.7.0
+  form_builder_validators: ^8.3.0
 
 dev_dependencies:
   flutter_test:
