--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   shared_preferences: ^2.0.15
   flutter_form_builder: ^7.7.0
   form_builder_validators: ^8.3.0
+  reactive_forms: ^14.1.0
+  reactive_forms_annotations: ^0.13.0-beta
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +59,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   auto_route_generator: ^5.0.3
   build_runner: ^2.3.2
+  reactive_forms_generator: ^0.22.0-beta
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
