--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,7 +48,7 @@ dependencies:
   form_builder_validators: ^8.3.0
   reactive_forms: ^14.1.0
   reactive_forms_annotations: ^0.13.0-beta
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -66,7 +68,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
