--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   flutter_dotenv: ^5.0.2
   easy_rich_text: ^1.1.0
   styled_widget: ^0.4.0+3
+  bloc_concurrency: ^0.2.0
+  stream_transform: ^2.1.0
 
 dev_dependencies:
   flutter_test:
