--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   styled_widget: ^0.4.0+3
   bloc_concurrency: ^0.2.0
   stream_transform: ^2.1.0
+  loading_more_list: ^5.0.2
 
 dev_dependencies:
   flutter_test:
