--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   bloc_concurrency: ^0.2.0
   stream_transform: ^2.1.0
   dynamic_widget: ^4.0.4
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
