--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -62,6 +62,28 @@
 				</array>
 			</dict>
 		</array>
+		<key>NSAppTransportSecurity</key>
+		<dict>
+			<key>NSExceptionDomains</key>
+			<dict>
+				<key>localhost</key>
+				<dict>
+					<!-- add this key to enable subdomains such as sub.yourserver.com -->
+					<key>NSIncludesSubdomains</key>
+					<true />
+					<!-- add this key to allow standard HTTP requests, thus negating the ATS -->
+					<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+					<true />
+					<!-- add this key to specify the minimum TLS version to accept -->
+					<key>NSTemporaryExceptionMinimumTLSVersion</key>
+					<string>TLSv1.1</string>
+				</dict>
+			</dict>
+		</dict>
+		<key>NSMicrophoneUsageDescription</key>
+		<string>Flutter requires acess to microphone.</string>
 
+		<key>NSCameraUsageDescription</key>
+		<string>Flutter requires acess to camera.</string>
 	</dict>
 </plist>
