--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   stream_transform: ^2.1.0
   dynamic_widget: ^4.0.4
   dio: ^4.0.6
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
