--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   dynamic_widget: ^4.0.4
   dio: ^4.0.6
   carousel_slider: ^4.1.1
+  sliver_tools: ^0.2.8
+  extended_sliver: ^2.1.3
 
 dev_dependencies:
   flutter_test:
