--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   carousel_slider: ^4.1.1
   sliver_tools: ^0.2.8
   extended_sliver: ^2.1.3
+  visibility_detector: ^0.3.3
+  flutter_smart_dialog: ^4.7.0+1
 
 dev_dependencies:
   flutter_test:
