--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   extended_sliver: ^2.1.3
   visibility_detector: ^0.3.3
   flutter_smart_dialog: ^4.7.0+1
+  liquid_pull_to_refresh: ^3.0.1
 
 dev_dependencies:
   flutter_test:
