--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ dependencies:
   visibility_detector: ^0.3.3
   flutter_smart_dialog: ^4.7.0+1
   liquid_pull_to_refresh: ^3.0.1
-  masonry_grid: ^1.0.0
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies:
   flutter_test:
