--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   flutter_smart_dialog: ^4.7.0+1
   liquid_pull_to_refresh: ^3.0.1
   flutter_staggered_grid_view: ^0.6.2
+  flutter_countdown_timer: ^4.1.0
 
 dev_dependencies:
   flutter_test:
