--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   liquid_pull_to_refresh: ^3.0.1
   flutter_staggered_grid_view: ^0.6.2
   flutter_countdown_timer: ^4.1.0
+  graphql: ^5.1.1
 
 dev_dependencies:
   flutter_test:
