--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   flutter_countdown_timer: ^4.1.0
   graphql: ^5.1.1
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
